feat: updating tenant management app for streamlined file service.
