# apps/file-service/src/file/router/file.swagger.yml
@@ -1,23 +1,114 @@
 components:
-  responses:
-    NotAuthorizedToUpdateFile:
-      description: |
-        Unauthorized. The allowed user groups are listed as follows:
-          | Group Name    | Keycloak Realm| Client  | Role|
-          | ------------- |:-------------:| -------:|-------:|
-          | GoA  | Tenant Realms | tenant-platform-webapp | File type update roles |
-    Unauthorized:
-      description: |
-        Unauthorized. The allowed user groups are listed as follows:
-          | Group Name    | Keycloak Realm| Client  |
-          | ------------- |:-------------:| -------:|
-          | GoA  | Tenant Realms | any |
+  schemas:
+    FileType:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        anonymousRead:
+          type: boolean
+        readRoles:
+          type: array
+          items:
+            type: string
+        updateRoles:
+          type: array
+          items:
+            type: string
+    File:
+      type: object
+      properties:
+        id:
+          type: string
+        filename:
+          type: string
+        size:
+          type: number
+        typeName:
+          type: string
+        recordId:
+          type: string
+        created:
+          type: string
+          format: date-time
+        createdBy:
+          type: object
+          properties:
+            id:
+              type: string
+            name:
+              type: string
+        scanned:
+          type: boolean
+        lastAccessed:
+          type: string
+          format: date-time
+
+/file/v1/types:
+  get:
+    tags:
+      - File Type
+    description: Retrieves file types.
+    responses:
+      200:
+        description: Request successful.
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/FileType"
+      401:
+        description: User not authorized.
+
+/file/v1/types/{typeId}:
+  get:
+    tags:
+      - File Type
+    description: Retrieves a file type.
+    parameters:
+      - name: typeId
+        description: ID of the file type.
+        in: path
+        required: true
+        schema:
+          type: string
+    responses:
+      200:
+        description: Request successful.
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/FileType"
+      401:
+        description: User not authorized.
 
 /file/v1/files:
   post:
     tags:
       - File
     description: Upload a file.
+    parameters:
+      - name: type
+        description: ID of the type.
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: filename
+        description: Name of the file.
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: recordId
+        description: ID of the associated record.
+        in: query
+        required: false
+        schema:
+          type: string
     requestBody:
       content:
         multipart/form-data:
@@ -37,66 +128,76 @@ components:
                 type: string
                 format: binary
                 description: Contents of the file.
+            required: [file]
     responses:
       200:
         description: File successfully uploaded.
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  type: string
-                filename:
-                  type: string
-                size:
-                  type: number
+              $ref: "#/components/schemas/File"
       400:
         description: Invalid parameters.
-      404:
-        description: Space or type not found.
       401:
-        $ref: "#/components/responses/NotAuthorizedToUpdateFile"
-
+        description: User not authorized.
+      404:
+        description: Type not found.
   get:
     tags:
       - File
-    description: Retrieves file list metadata.
-    responses:
-      200:
-        description: File metadata
+    description: Retrieves files.
+    parameters:
+      - name: criteria
+        description: Criteria for files to retrieve.
+        in: query
+        required: false
         content:
           application/json:
             schema:
-              type: array
-              items:
-                type: object
-                properties:
-                  id:
-                    type: string
-                  filename:
-                    type: string
-                  size:
-                    type: number
-                  fileURN:
-                    type: string
-      404:
-        description: file not found
+              type: object
+              properties:
+                typeEquals:
+                  type: string
+                recordIdEquals:
+                  type: string
+                filenameContains:
+                  type: string
+    responses:
+      200:
+        description: Request successful.
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                results:
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/File"
+                page:
+                  type: object
+                  properties:
+                    after:
+                      type: string
+                    next:
+                      type: string
+                    size:
+                      type: number
       401:
-        $ref: "#/components/responses/Unauthorized"
+        description: User not authorized.
 
 /file/v1/files/{fileId}:
+  parameters:
+    - name: fileId
+      description: ID of the file.
+      in: path
+      required: true
+      schema:
+        type: string
   delete:
     tags:
       - File
     description: Marks a file for deletion.
-    parameters:
-      - name: fileId
-        description: ID of the file to delete.
-        in: path
-        required: true
-        schema:
-          type: string
     responses:
       200:
         description: Delete result
@@ -108,42 +209,24 @@ components:
                 deleted:
                   type: boolean
       404:
-        description: file not found
+        description: File not found
       401:
-        $ref: "#/components/responses/NotAuthorizedToUpdateFile"
+        description: User not authorized
   get:
     tags:
       - File
     description: Retrieves a file's metadata.
-    parameters:
-      - name: fileId
-        description: ID of the file to retrieve.
-        in: path
-        required: true
-        schema:
-          type: string
     responses:
       200:
         description: File metadata
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  type: string
-                filename:
-                  type: string
-                size:
-                  type: number
-                scanned:
-                  type: boolean
-                deleted:
-                  type: boolean
+              $ref: "#/components/schemas/File"
       404:
-        description: file not found
+        description: File not found
       401:
-        $ref: "#/components/responses/Unauthorized"
+        description: User not authorized
 
 /file/v1/files/{fileId}/download:
   get:
@@ -157,15 +240,21 @@ components:
         required: true
         schema:
           type: string
+      - name: unsafe
+        description: Flag indicating whether to download file not yet virus scanned.
+        in: query
+        required: false
+        schema:
+          type: boolean
     responses:
       200:
-        description: File binary content
+        description: Request successful.
         content:
           application/octet-stream:
             schema:
               type: string
               format: binary
       404:
-        description: file not found
+        description: File not found
       401:
-        $ref: "#/components/responses/NotAuthorizedToUpdateFile"
+        description: User not authorized
